added startpoint and endpoint

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     
     <h1 id="headline">A* search Algorithm visualization</h1>
 
+    <div id="btns">
     <button id="startButton">Start A* Search</button>
+
+    <button id="restart">Restart</button>   
+    </div>  
 
     <div id="grid"></div>
 
