added slowmo astar

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
     <title>A* search Algorithm</title>
+   
 </head>
 <body>    
     
@@ -13,11 +16,14 @@
     <div id="btns">
     <button id="startButton">Start A* Search</button>
 
+    <button id="startSlowButton">Start A* Search slowmotion</button>
+
     <button id="restart">Restart</button>   
     </div>  
 
     <div id="grid"></div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script>    
+   
 </body>
 </html>
